--- a/src/main/resources/public/recursos/css/style.css
+++ b/src/main/resources/public/recursos/css/style.css
@@ -15,7 +15,7 @@ input[type=text], select {
     box-sizing: border-box;
 }
 
-input[type=submit] {
+input[type=button] {
     width: 100%;
     background-color: #4CAF50;
     color: white;
